Bug 165858 - pdf export - pdf form option not available
Summary: pdf export - pdf form option not available
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
: 166123 (view as bug list)
Depends on:
Blocks: PDF-Export-Options-Dialog
  Show dependency treegraph
 
Reported: 2025-03-22 08:00 UTC by raal
Modified: 2025-05-06 08:07 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2025-03-22 08:00:17 UTC
Description:
.

Steps to Reproduce:
1.export file File-Export as - Export as PDF
2.section Forms 


Actual Results:
cannot tick option "Create PDF form"

Expected Results:
"Create PDF form" available


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ddaea18557b1ec60d9e360f9eab539c8f551061f
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 1 raal 2025-03-22 08:02:39 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.8.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 2cd2ca08740a0283a3aac51e91d972a79fa2b82f is the first bad commit
commit 2cd2ca08740a0283a3aac51e91d972a79fa2b82f
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Thu Dec 26 08:02:21 2024 +0100

    source 94378114b58a89812ce9d98887b0fd193c06b15d

178768: pdf: Rearrange general tab of PDF dialog, add PDF vers. selection | https://gerrit.libreoffice.org/c/core/+/178768
Comment 2 m_a_riosv 2025-03-22 15:05:04 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 81dfc7afcdc473bd655ff64038e8a449a9999c0c
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded
Comment 3 Timur 2025-04-29 08:58:46 UTC
*** Bug 166123 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2025-05-03 11:54:23 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/86e8abc2b171f56511787eda28f1604a0ee6d000

tdf#165858 pdf: use the correct widget to dissble the forms options

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Timur 2025-05-06 08:07:55 UTC
Thanks for fixing this.